rollback dark mode images fix v2 to v1

--- a/docs/stylesheets/extra.css
+++ b/docs/stylesheets/extra.css
@@ -1,9 +1,11 @@
-@media (prefers-color-scheme: dark) {
-    img, video {
+@media screen {
+    [data-md-color-scheme="slate"] {
         /* 
         FIX: images not being displayed properly in dark mode
-        Reference:: https://www.youtube.com/watch?v=JONzCyVXa60
+        Reference: 
         */
-        filter: invert(95%) hue-rotate(180deg);
+        img, video {
+            filter: invert(95%) hue-rotate(180deg);
+        }
     }
 }
